Bug Fix Help Menu and Creatopedia visibility

--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -453,7 +453,7 @@ img.wallet_icon {
 .blocky {
   float: left;
   width: 18px;
-  height: 18px;
+  height: 8px;
   border: 1px solid black;
 }
 
